--- a/DesignAndArchitectureProject/pom.xml
+++ b/DesignAndArchitectureProject/pom.xml
@@ -28,7 +28,10 @@
     </scm>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>iammistake123</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.postgresql</groupId>
