--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -26,6 +26,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Python dependencies
+        working-directory: ./ScrapingService
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Python scraper
+        working-directory: ./ScrapingService
+        run: python StartApp.py
+
       # --- Backend (SpringBoot - Java) Analysis ---
       - name: Set up JDK 17 for SpringBoot
         uses: actions/setup-java@v4
@@ -62,12 +77,6 @@ jobs:
       - name: Install React dependencies
         working-directory: ./frontend
         run: npm install
-
-      # --- Python (Web Scraper) Analysis ---
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
 
       # --- Run SonarCloud Scan (Multi-language) ---
       - name: SonarCloud Scan
