--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,7 +1,7 @@
 name: SonarCloud Scan
 on:
   push:
-    branches: [ main, cicd ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
