--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run ESLint (TypeScript)
         working-directory: ./frontend
-        run: npx eslint src/ --max-warnings=0
+        run: npx eslint src/
 
       # ===== Backend (SpringBoot/Java) =====
       - name: Set up JDK 17
